Fixed overflow on 4K screens

--- a/common.css
+++ b/common.css
@@ -128,6 +128,7 @@ nav{
     width: 100%;
     max-width: 1500px;
     display: flex;
+    overflow: hidden;
 }
 button{
     background-color: transparent;
